# swc-plugin-global-module

./: .gitignore  Cargo.toml  MECHANISMS.md  README.md  USE_CASES.md  build.ts  demo.ts  package.json  tsconfig.json
runtime/: helpers.ts  index.ts  types.ts
transform/: Cargo.toml
transform/src/: cjs_transformer.rs  constants.rs  esm_collector.rs  helpers.rs  lib.rs  module_collector_esm.rs  module_mapper.rs  module_resolver.rs  utils.rs
transform/tests/: fixture.rs
transform/tests/fixture/cjs/exports/exports_expr/: output.js
transform/tests/fixture/cjs/exports/named_exports_class/: output.js
transform/tests/fixture/cjs/exports/named_exports_fn/: output.js
transform/tests/fixture/cjs/exports/top_level_exports_class/: output.js
transform/tests/fixture/cjs/exports/top_level_exports_expr/: input.js  output.js
transform/tests/fixture/cjs/exports/top_level_exports_fn/: output.js
transform/tests/fixture/cjs/exports/top_level_named_exports_class/: input.js  output.js
transform/tests/fixture/cjs/exports/top_level_named_exports_expr/: input.js  output.js
transform/tests/fixture/cjs/import_paths/: input.js  output.js
transform/tests/fixture/cjs/module_ids/: output.js
transform/tests/fixture/cjs/non-runtime/exports_class/: input.js  output.js
transform/tests/fixture/cjs/non-runtime/exports_expr/: input.js
transform/tests/fixture/cjs/non-runtime/exports_fn/: input.js  output.js
transform/tests/fixture/esm/import_paths/: output.js
transform/tests/fixture/esm/module_ids/: output.js
transform/tests/fixture/esm/normalize_src/: input.js  output.js
(+73 files in other folders)
